--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1"
   },
-  
   "scripts": {
-    "start": "node index.js",
-    "build":"npm i"
-  }
+    "start": "node index",
+    "build": "npm i"
+  },
+    "name": "baceend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
+
 }
